# ffplayer

./: .gitignore  CMakeLists.txt  readme.md
src/: cmdutils.c  cmdutils.h  config.h  config_components.h  ffplay_renderer.h  ffplayer.c  ffplayer.h  main.c  opt_common.c
